--- a/src/app/sections/categories/categories.component.html
+++ b/src/app/sections/categories/categories.component.html
@@ -48,15 +48,8 @@
                   {{ formatSlug(league.slug) }}
                 </span>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', league.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
-
           </div>
-
           }
         </div>
         }
@@ -89,15 +82,7 @@
                   <i class="bi bi-calendar-event me-2 text-warning"></i>
                   {{ serie.begin_at | date:'MMM d, y' }} - {{ serie.end_at | date:'MMM d, y' }}
                 </p>
-
-
-
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', serie.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -141,11 +126,6 @@
                   </div>
                 </div>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', tournament.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -190,13 +170,7 @@
                   </li>
                 </ul>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', match.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
-
           </div>
           }
         </div>
@@ -240,11 +214,6 @@
                   {{ formatSlug(league.slug) }}
                 </span>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', league.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -269,11 +238,6 @@
                   {{ serie.season ? (serie.season + ' ' + serie.year) : serie.year }}
                 </span>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', serie.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -317,11 +281,6 @@
                   </div>
                 </div>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', tournament.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -365,14 +324,8 @@
                     Status: {{ match.status | titlecase }}
                   </li>
                 </ul>
-              </div><button
-                class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', match.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
+              </div>
             </div>
-
           </div>
           }
         </div>
@@ -387,8 +340,7 @@
         <h3 class="game-title mb-3">Dota 2</h3>
         <div class="game-filters">
           <button (click)="currentViewDota2 === 'leagues' ? currentViewDota2 = '' : currentViewDota2 = 'leagues'"
-            class="btn btn-outline-light btn-sm"
-            [ngClass]="{ 'active': currentViewDota2 === 'leagues' }">Leagues</button>
+            class="btn btn-outline-light btn-sm" [ngClass]="{ 'active': currentViewDota2 === 'leagues' }">Leagues</button>
           <button (click)="currentViewDota2 === 'series' ? currentViewDota2 = '' : currentViewDota2 = 'series'"
             class="btn btn-outline-light btn-sm" [ngClass]="{ 'active': currentViewDota2 === 'series' }">Series</button>
           <button
@@ -419,11 +371,6 @@
                   {{ formatSlug(league.slug) }}
                 </span>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', league.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -448,11 +395,6 @@
                   {{ serie.season ? (serie.season + ' ' + serie.year) : serie.year }}
                 </span>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', serie.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -496,11 +438,6 @@
                   </div>
                 </div>
               </div>
-              <button class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', tournament.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -544,14 +481,8 @@
                     Status: {{ match.status | titlecase }}
                   </li>
                 </ul>
-              </div><button
-                class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', match.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
+              </div>
             </div>
-
           </div>
           }
         </div>
@@ -565,21 +496,15 @@
         </ng-container>
         <h3 class="game-title mb-3">Valorant</h3>
         <div class="game-filters">
-          <button
-            (click)="currentViewValorant === 'leagues' ? currentViewValorant = '' : currentViewValorant = 'leagues'"
-            class="btn btn-outline-light btn-sm"
-            [ngClass]="{'active': currentViewValorant === 'leagues'}">Leagues</button>
+          <button (click)="currentViewValorant === 'leagues' ? currentViewValorant = '' : currentViewValorant = 'leagues'"
+            class="btn btn-outline-light btn-sm" [ngClass]="{'active': currentViewValorant === 'leagues'}">Leagues</button>
           <button (click)="currentViewValorant === 'series' ? currentViewValorant = '' : currentViewValorant = 'series'"
-            class="btn btn-outline-light btn-sm"
-            [ngClass]="{'active': currentViewValorant === 'series'}">Series</button>
-          <button
-            (click)="currentViewValorant === 'tournaments' ? currentViewValorant = '' : currentViewValorant = 'tournaments'"
+            class="btn btn-outline-light btn-sm" [ngClass]="{'active': currentViewValorant === 'series'}">Series</button>
+          <button (click)="currentViewValorant === 'tournaments' ? currentViewValorant = '' : currentViewValorant = 'tournaments'"
             class="btn btn-outline-light btn-sm"
             [ngClass]="{'active': currentViewValorant === 'tournaments'}">Tournaments</button>
-          <button
-            (click)="currentViewValorant === 'matches' ? currentViewValorant = '' : currentViewValorant = 'matches'"
-            class="btn btn-outline-light btn-sm"
-            [ngClass]="{'active': currentViewValorant === 'matches'}">Matches</button>
+          <button (click)="currentViewValorant === 'matches' ? currentViewValorant = '' : currentViewValorant = 'matches'"
+            class="btn btn-outline-light btn-sm" [ngClass]="{'active': currentViewValorant === 'matches'}">Matches</button>
         </div>
 
         @if (currentViewValorant === 'leagues') {
@@ -601,12 +526,6 @@
                   {{ formatSlug(league.slug) }}
                 </span>
               </div>
-              <button
-                class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', league.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -642,12 +561,6 @@
                   {{ serie.begin_at | date:'MMM d, y' }} - {{ serie.end_at | date:'MMM d, y' }}
                 </p>
               </div>
-               <button
-                class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', serie.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -691,12 +604,6 @@
                   </div>
                 </div>
               </div>
-              <button
-                class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', tournament.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
@@ -741,12 +648,6 @@
                   </li>
                 </ul>
               </div>
-              <button
-                class="btn btn-sm btn-warning mt-3 w-100 d-flex align-items-center justify-content-center gap-2"
-                (click)="addToFavorites('match', match.id)">
-                <i class="bi bi-star-fill"></i>
-                Save Favorite
-              </button>
             </div>
           </div>
           }
